fixed spacing for headers

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -103,7 +103,7 @@ section {
   background-position: center bottom;
   background-size: inherit;
   background-attachment: inherit;
-  h2 { color: $watermelon; }
+  h2 { color: $watermelon; margin-bottom: 1rem; }
 }
 
 #what-to-wear {
