--- a/css/i.css
+++ b/css/i.css
@@ -1118,7 +1118,8 @@ section {
   background-size: inherit;
   background-attachment: inherit; }
   #the-big-day h2 {
-    color: #FF6060; }
+    color: #FF6060;
+    margin-bottom: 1rem; }
 
 #what-to-wear {
   background-color: #FFD7D6; }
